# proteingym-benchmark

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  app.py  datasets-list.json  dvc.yaml  index.html  memory.sh  package-lock.json  package.json  params.yaml  pyproject.toml  report.md  requirements.txt  svelte.config.js  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci.yaml  ci_datasets.json  cml.yaml  deploy-ecr.yaml
_app/: version.json
benchmark/: datasets.json  index.html  metrics.csv  models.json
benchmark/supervised/: datasets.json  default.yaml  dvc.yaml  metrics_summary.csv  models.json
benchmark/zero_shot/: datasets.json  default.yaml  dvc.yaml  metrics_summary.csv  models.json
config/: dataset.toml  pls.toml
data/: dataset.toml  metrics.csv  model.toml
data/supervise/: .gitignore
data/zero_shot/: dataset.toml  model.toml
datasets/: NEIME_2019.pgdata  NEIME_2019.toml  charge_ladder.toml  index.html  ranganathan.pgdata  ranganathan.toml
datasets/charge_ladder/: index.html
datasets/dummy/: charge_ladder.csv  charge_ladder.pgdata  charge_ladder.toml
datasets/neime/: NEIME_2019.pgdata  neime.toml
datasets/original/: A0A1I9GEU1_NEIME_Kennouche_2019.pgdata
datasets/ranganathan/: index.html  ranganathan.pgdata  ranganathan.toml
datasets/splits/: A0A1I9GEU1_NEIME_Kennouche_2019.splits.pgdata  Dummy_test_P0DX94.splits.pgdata
docs/: manifest.md  metric.md
docs/decisions/: 0001-model-validation-decisions.md  0001-serve-model-cards-online.md  0001-serve-model-cards.md
esm/: index.html
huggingface-regressor/: index.html
model/: index.html
model/esm/: Dockerfile  README.md  index.html  pyproject.toml
model/huggingface-regressor/: index.html
model/pls/: README.md  index.html  pyproject.toml
models/: README.md
models/aidoragplm/: Dockerfile  README.md  pyproject.toml
models/aidoragplm/src/proteingym/models/aido_ragplm/: __init__.py  __main__.py  _inference.py  model.py  preprocess.py
models/aidoragplm/src/proteingym/models/aido_ragplm/_vendored/fm4bio/: __init__.py  modeling_fm4bio.py
models/aidoragplm/tests/: test_model.py
models/esm/: Dockerfile  README.md  Singularity.def  manifest.toml  pyproject.toml
models/esm-evedesign/: Dockerfile  README.md  pyproject.toml
models/esm-evedesign/src/proteingym/models/esm_evedesign/: __main__.py  model.py
models/esm/src/pg2_model_esm/: __main__.py  main.py  manifest.py  model.py  predict.py  preprocess.py  utils.py
models/esm/src/proteingym/models/esm/: __main__.py  model.py  preprocess.py  utils.py
models/gemme/: Dockerfile  README.md  pyproject.toml
models/huggingface-regressor/: Dockerfile  README.md  pyproject.toml
models/huggingface-regressor/src/proteingym/models/hfregressor/: __main__.py  huggingface_regressor.py  preprocess.py  utils.py
models/huggingface-regressor/src/proteingym/models/hfregressor/embedders/: rita_embedder.py
models/huggingface-regressor/tests/: test_main.py  test_model.md
models/huggingface-regressor/tests/data/: charge_ladder.pgdata  test_model_card.md
models/kermut/: .gitattributes  Dockerfile  README.md  pyproject.toml
models/pkermut/: .gitignore  Dockerfile  README.md  pyproject.toml
models/pkermut/kermut/src/kermut/kermut.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/pkermut/pg_model/: pyproject.toml
models/pkermut/pg_model/src/pg_model/: __main__.py
models/pkermut/src/proteingym/models/pkermut/: __main__.py  utils.py
models/pkermut/src/proteingym/models/pkermut/kermut/calibration/: __init__.py  _compute_confidence_interval_based_metrics.py  _compute_error_based_metrics.py
models/pkermut/src/proteingym/models/pkermut/kermut/cmdline/preprocess_data/: extract_ProteinMPNN_probs.py  extract_esm2_embeddings.py  extract_esm2_zero_shots.py
models/pkermut/src/proteingym/models/pkermut/kermut/cmdline/process_results/: compute_calibration_metrics.py  process_model_scores.py
models/pkermut/src/proteingym/models/pkermut/kermut/data/: _filter.py  _prepare_GP_inputs.py  _prepare_GP_kwargs.py  _standardize.py  _tokenizer.py
models/pkermut/src/proteingym/models/pkermut/kermut/gp/: _gp.py  _instantiate_gp.py  _predict.py
models/pkermut/src/proteingym/models/pkermut/kermut/kernels/: _composite_kernel.py  _structure_kernel.py
models/pkermut/src/proteingym/models/pkermut/pg_model/: constants.py  kermut_run.py  utils.py
models/pkermut/src/proteingym/models/pkermut/pg_model/hydra_configs/: benchmark.yaml
models/pkermut/src/proteingym/models/pkermut/pg_model/hydra_configs/data/: paths.yaml
models/pkermut/src/proteingym/models/pkermut/pg_model/hydra_configs/kernel/: kermut.yaml
models/pkermut/src/proteingym/models/pkermut/pg_model/scripts/: conditionals.py  coords.py  embeddings.py  precompute_artifacts.py  process_conditionals.py  zero_shot.py
models/pkermut/tests/: conftest.py
models/pkermut/tests/data/: test_model_card.md
models/pkermut/tests/proteingym/models/pkermut/: test_main.py
models/pls/: Dockerfile  README.md  manifest.toml  pyproject.toml
models/pls/src/pg2_model_pls/: __main__.py  main.py  model.py  predict.py  preprocess.py  train.py  utils.py
models/pls/src/proteingym/models/pls/: __main__.py  model.py  preprocess.py
models/pls/tests/: test_main.py
models/sift/: Dockerfile  README.md  pyproject.toml
pls/: index.html
scripts/: README.md  dummy_data.py  generate-datasets-list.js  generate_datasets_list.py  metric.py  requirements.txt  sagemaker.py  utils.py
src/pg2_benchmark/: __init__.py  __main__.py  cli.py  dummy_data.py  logger.py  main.py  manifest.py  meta.py  model.py  model_card.py  model_validator.py  repo.py  (+1 more)
supervised/: dvc.aws.yaml  dvc.local.yaml  dvc.yaml  params.yaml
tests/: conftest.py  test_dummy_data.py  test_main.py  test_manifest.py  test_metric_recovery.py  test_metric_spearman.py  test_metrics.py  test_metrics_entrypoint.py  test_model_card.py  test_select.py  test_validate.py
zero_shot/: dvc.aws.yaml  dvc.local.yaml  dvc.yaml  params.yaml
(+428 files in other folders)
