[project]
name = "proteingym-benchmark"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shu Zhao", email = "shu.zhao@xebia.com" },
    { name = "Cor Zuurmond", email = "Cor.Zuurmond@xebia.com" },
    { name = "Prashant Srivastava", email = "Prashant.Srivastava@xebia.com" },
    { name = "Henning Redestig", email = "Henning.Redestig@iff.com" },
    { name = "Karel van der Weg", email = "karel.weg@iff.com" },
]
dynamic = ["version"]  # Dynamically set hatch version using git tags
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.2",
    "proteingym-base[biopython]",
    "pycm>=4.3",
    "scipy>=1.15.3",
    "dvc>=3.59.2",
    "boto3>=1.38.27",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
proteingym-benchmark = "proteingym.benchmark.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/proteingym/benchmark/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.uv.sources]
pg2-dataset = { git = "https://github.com/ProteinGym2/pg2-dataset.git", rev = "58c327e13bade1effe1312eb2b8d5445016a5a8f" }

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]
