[project]
name = "proteingym-models-aidoragplm"
version = "0.1.0"
description = "AIDO.RAGPLM (genbio-ai/AIDO.Protein-RAG-3B) zero-shot mutation scorer submitted to ProteinGym"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer~=0.16.0",
    "proteingym-base",
    "evedesign",
    "torch>=2.2",
    "transformers>=4.38,<5",
    "huggingface-hub>=0.20",
    "safetensors>=0.4",
    "numpy>=1.26,<3",
    "polars[pyarrow]~=1.31.0",
    "rich>=13.0",
    # Constrain evedesign's transitive deps to Python 3.12-compatible versions
    "numba>=0.59",
    "llvmlite>=0.42",
]

[project.scripts]
aidoragplm = "proteingym.models.aido_ragplm.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
proteingym-base = { git = "https://github.com/ProteinGym/proteingym-base.git" }
evedesign = { git = "https://github.com/evedesignbio/evedesign.git", rev = "3b9a96d1ff84e5a29a10f8be4fac276829610cd5" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/proteingym"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest~=8.4.1",
    "pytest-mock~=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: marks tests that load the real AIDO.Protein-RAG-3B checkpoint (gated by AIDO_RUN_INTEGRATION_TESTS=1)",
]
