[project]
name = "proteingym-models-esm-evedesign"
version = "0.1.0"
description = "ESM2 model (evedesign-wrapped) submitted to ProteinGym"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer~=0.16.0",
    "proteingym-base",
    "evedesign[esm2,proteingym]",
    "polars[pyarrow]~=1.31.0",
    "dill~=0.3.8",
]

[project.scripts]
esm-evedesign = "proteingym.models.esm_evedesign.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
proteingym-base = { git = "https://github.com/ProteinGym/proteingym-base.git" }
evedesign = { git = "https://github.com/evedesignbio/evedesign.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/proteingym"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest~=8.4.1",
]
