[project]
name = "pg2-model-esm"
version = "0.1.0"
description = "Project to be submitted to ProteinGym2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer~=0.16.0",
    "pg2-dataset[biopython]",
    "fair-esm~=2.0.0",
    "torch~=2.7.1",
    "bio~=1.8.0",
    "msgpack~=1.1.1",
    "polars[pyarrow~=1.31.0",
]

[project.scripts]
pg2-model = "pg2_model_esm.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pg2-dataset = { git = "https://github.com/ProteinGym2/pg2-dataset.git",  rev = "58c327e13bade1effe1312eb2b8d5445016a5a8f" }

[tool.hatch.build.targets.wheel]
packages = ["src/pg2_model_esm"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest~=8.4.1",
]
