[project]
name = "proteingym-models-esm"
version = "0.1.0"
description = "ESM model submitted to ProteinGym"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer~=0.16.0",
    "proteingym-base[biopython]",
    "fair-esm~=2.0.0",
    "torch~=2.7.1",
    "bio~=1.8.0",
    "msgpack~=1.1.1",
    "polars[pyarrow]~=1.31.0",
]

[project.scripts]
esm = "proteingym.models.esm.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# TODO: After proteingym-base and proteingym-benchmark are public repositories, below reference can be updated
proteingym-base = { path = "dist/proteingym_base-0.1.0b1-py3-none-any.whl" }

[tool.hatch.build.targets.wheel]
packages = ["src/proteingym"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest~=8.4.1",
]
