[project]
name = "proteingym-models-hfregressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "polars>=1.34.0",
    "proteingym-base",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "typer>=0.19.2",
]

[project.scripts]
hfregressor = "proteingym.models.hfregressor.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
proteingym-base = { path = "dist/proteingym_base-0.1.0b1-py3-none-any.whl" }

[tool.hatch.build.targets.wheel]
packages = ["src/proteingym"]

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
