[project]
name = "proteingym.models.pkermut"
version = "0.1.0"
description = "Kermut in preferential mode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "kermut",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "proteingym-base",
]

[project.scripts]
pkermut = "proteingym.models.pkermut.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteingym"]

[tool.uv.sources]
proteingym-base = { git = "https://github.com/ProteinGym/proteingym-base.git" }
kermut = { path = "software/kermut-package-kermut-package.zip" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
