[project]
name = "proteingym-models-pls"
version = "0.1.0"
description = "PLS model submitted to ProteinGym"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer~=0.16.0",
    "numpy~=2.2.5",
    "scikit-learn~=1.7.0",
    "proteingym-base",
    "polars[pyarrow]~=1.31.0",
    "requests",
]

[project.scripts]
pls = "proteingym.models.pls.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteingym"]

[tool.uv.sources]
proteingym-base = { git = "https://github.com/ProteinGym/proteingym-base.git" }

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pytest~=8.4.1",
]