[project]
name = "pg-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "proteingym-base",
]

[dependency-groups]
dev = []

[tool.uv.sources]
proteingym-base = { path = "dist/proteingym_base-0.1.0b1-py3-none-any.whl" }
